# Core-AI-Framework-Lab

./: .gitattributes  .gitignore  AGENTS.md  APPLE_CORE_AI_CAPABILITIES.md  DESIGN.md  GRAND_PLAN.md  PRODUCT.md  README.md  THIRD_PARTY_NOTICES.md  coreai.md  project.yml
.github/: actionlint.yaml
.impeccable/: design.json
Conversion/Chatterbox/: README.md  coreai_state.py  encoders.py  export.py  pyproject.toml  runtime_validate.py  s3gen.py  synthesize_coreai.py  t3.py  vocoder.py
Conversion/Chatterbox/tests/: test_cli_contracts.py  test_encoders.py  test_s3gen.py  test_t3.py  test_vocoder.py
Conversion/Diarization/: MODEL_SELECTION.md  README.md  TESTING_PLAN.md  export.py  generate_swift_feature_fixture.py  make_ami_diarization_fixture.py  model.py  pyproject.toml  validate.py
Conversion/Diarization/tests/: test_model.py  test_validate.py
CoreAIFrameworkLab.xcodeproj/: project.pbxproj
CoreAILab/: ContentView.swift  CoreAILabApp.swift  CoreAILabSection.swift  CoreAILabTab.swift  CoreAIModelContentType.swift  CoreAIRuntimeView.swift  CoreAIWorkspaceInspectorView.swift
CoreAILab.xcodeproj/: project.pbxproj
CoreAILabCore/: CoreAIDiscoverySnapshot.swift  CoreAIHexadecimal.swift  CoreAIModelAssetInspector.swift  CoreAIModelLoader.swift  Duration+CoreAI.swift
CoreAILabTests/: AppleAudioIntegrationTests.swift  AppleAudioWorkspaceModelTests.swift  AppleCoreAIModelCatalogTests.swift  AppleDiffusionIntegrationTests.swift  AppleDiffusionWorkspaceModelTests.swift  AppleLanguageIntegrationTests.swift  AppleLanguageWorkspaceModelTests.swift  (+32 more)
(+483 files in other folders)
