[project]
name = "chatterbox-coreai-conversion"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chatterbox-tts==0.1.7",
    "coreai-core==1.0.0b1",
    "coreai-opt==0.2.0",
    "coreai-torch==0.4.0",
    "huggingface-hub>=0.34.0",
    "pytest>=8.4.0",
    "safetensors>=0.5.0",
    "torch==2.9.1",
    "torchaudio==2.9.1",
]

[tool.uv]
package = false
prerelease = "allow"
override-dependencies = [
    "numpy==2.2.6",
    "torch==2.9.1",
    "torchaudio==2.9.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
