[project]
name = "coreai-diarization-conversion"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "coreai-core==1.0.0b1",
    "coreai-torch==0.4.0",
    "huggingface-hub>=0.34.0",
    "numpy==2.2.6",
    "pytest>=8.4.0",
    "torch==2.9.1",
    "torchaudio==2.9.1",
]

[tool.uv]
package = false
prerelease = "allow"

[tool.pytest.ini_options]
pythonpath = ["."]
